--- a/scss/_filter.scss
+++ b/scss/_filter.scss
@@ -28,11 +28,11 @@
                 cursor:pointer;
                 .filterIcon{
                     width:35px;
-                    background-color: #D9D9D9;
+                    background-color: $backgroundColor;
                     border-radius: 50%;
                     padding: 5px;
                     margin: 5px;
-                    box-shadow: 0 0 4px 2px #707070;
+                    box-shadow: $boxShadowCard;
                     // transition: all 0.3s ease-in-out;
                     &:hover + .filterWord{
                         opacity: 1;
@@ -43,12 +43,11 @@
                 .filterWord{
                     opacity: 0;
                     visibility: hidden;
-                    font-size: 0.8rem;
+                    font-size: $xSmallText;
                     font-family: $fontJura;
-                    font-weight: 600;
-                    color: #ffffff;
-                    font-weight: 400;
-                    background-color: #000000;
+                    font-weight: $bold;
+                    color: $whiteColor;
+                    background-color: $blackColor;
                     padding: 5px 15px;
                     position: absolute;
                     top:25px;
@@ -59,10 +58,10 @@
             }
         }
         .subtitle{
-            font-size: 1.1rem;
+            font-size: $regularText;
             font-family: $fontJura;
-            color: #D9D9D9;
-            font-weight: 400;
+            color: $secondaryColor;
+            font-weight: $MediumBold;
             padding: 5px;
             margin: 50px 0px;
         }
@@ -76,12 +75,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: flex-start;
-            background-color: #ffffff;
+            background-color: $whiteColor;
             overflow: hidden;
-            box-shadow: 0 0 10px 6px #070707;
+            box-shadow:$boxShadowMenu;
             z-index: 10;
             transform: translate(-105%);
-            transition: 0.3s ease-in-out;
+            transition:$transition;
             label{
                 .closeCross{
                     width:15px;
@@ -90,7 +89,7 @@
                     top:20px;
                     right:25px;
                     transform: rotate(0deg);
-                    transition: all 0.3s ease-in-out;
+                    transition: $transition;
                     &:hover{
                         transform: rotate(90deg);
                     }
@@ -105,30 +104,30 @@
                 margin: 0px auto;
                 .filterWord{
                     width: inherit;
-                    font-size: 1.3rem;
+                    font-size: $MediumTitle;
                     font-family: $fontJura;
-                    color:#BC2327;
-                    font-weight: 600;
-                    margin:0px auto ;
+                    color:$primaryColor;
+                    font-weight: $bold;
+                    margin:$neutralMargin ;
                     padding-bottom: 30px;
-                    border-bottom: 1px solid #e4e4e4;
+                    border-bottom: $borderBottom;
                 }
                 .sectionAvailability, .sectionPricing{
                     width: inherit;
-                    margin:0px auto ;
+                    margin:$neutralMargin;
                     padding: 30px 0px;
-                    border-bottom: 1px solid #e4e4e4;
+                    border-bottom:$borderBottom;
                     .titleAvailability, .titlePricing{
                         font-size: 1rem;
                         font-family: $fontJura;
-                        color:#BC2327;
-                        font-weight: 600;
+                        color:$primaryColor;
+                        font-weight: $bold;
                         margin: 15px 0px;
                     }
                     .availability, .pricing{
-                        font-size: 0.9rem;
+                        font-size: $smallText;
                         font-family: $fontJura;
-                        color:#424242;
+                        color:$tertiaryColor;
                         .labelOne, .labelTwo, .labelThree{
                             display: flex;
                             flex-direction:row;
@@ -155,18 +154,18 @@
                     justify-content: center;
                     align-items: center;
                     margin:30px auto;
-                    font-size: 1rem;
+                    font-size: $regularText;
                     font-family: $fontJura;
-                    font-weight: 600;
-                    color: #ffffff;
+                    font-weight: $bold;
+                    color: $whiteColor;
                     border: 1px solid transparent;
-                    background-color: #070707;
-                    transition: all 0.3s ease;
+                    background-color: $blackColor;
+                    transition: $transition;
                     &:hover{
-                        color: #070707;
-                        background-color: #ffffff;
-                        border:1px solid #000000;
-                        font-weight: 600;
+                        color: $blackColor;
+                        background-color: $whiteColor;
+                        border:$btnMenu;
+                        font-weight: $bold;
                     }
                 }
             }
