--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -9,12 +9,13 @@ $mainTitle:4.5rem;
 $subtitle:4rem;
 $sectionSubtitle:3.5rem;
 $LargeTitle :2.5rem;
+$nameLogo:1.8rem;
 $MediumTitle :1.2rem;
 // $breakTitle:1.2rem;
 $regularText:1rem;
 $smallText:0.9rem;
 $xSmallText:0.8rem;
-// $breakText:0.9rem;
+$breakText:0.5rem;
 // $smallTitle:0.8rem;
 // $breakSmallText:0.7rem;
 // $xSmallParagraphText:0.6rem;
@@ -44,6 +45,7 @@ $backgroundColor:#f1f1f1;
 $moonBackgroundColor:#131313;
 
 $btnBackgroundColor:#3d3d3d;
+$secondaryBackground:#1b1b1b;
 $lineColor:#6b6b6b;
 
 // Shadows
@@ -68,7 +70,9 @@ $hoverCardColor:#707070;
 $paddingSectionCto: 20px 40px;
 
 // Hero Section Button
+
 $paddingHero:25px 55px;
+
 // Margin
 
 // $margin:;
@@ -87,7 +91,7 @@ $neutralMargin: 0px auto;
 // Border-radius
 
 // Border
-
+$borderTop:1px solid #3d3d3d;
 $borderBottom:1px solid #e4e4e4;
 $btnMenu:1px solid #000000;
 
