--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -10,6 +10,7 @@ $subtitle:4rem;
 $sectionSubtitle:3.5rem;
 $LargeTitle :2.5rem;
 $nameLogo:1.8rem;
+$sentence:1.5rem;
 $MediumTitle :1.2rem;
 // $breakTitle:1.2rem;
 $regularText:1rem;
