--- a/scss/_get_Off.scss
+++ b/scss/_get_Off.scss
@@ -1,13 +1,13 @@
 // GettOff
 
 .getOff{
-    width:100%;
-    height: 100%;
+    width:$screenPercentageWidth;
+    height:$screenPercentageHeight;
     background-image: url("../img/background_Gift.webp");
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #131313;
+    background-color: $moonBackgroundColor;
     margin: 200px 0px;
     display: flex;
     flex-direction: column;
@@ -22,21 +22,21 @@
         padding-bottom: 100px;
         .info{
             .title{
-                font-size:4rem;
+                font-size:$subtitle;
                 font-family: $fontRubik;
-                color: #BC2327;
+                color:$primaryColor;
                 margin-top: -150px;
             }
             .paragraph{
                 margin-top: 50px;
                 .subtitle, .sentence, .cta{
-                    font-size:1.8rem;
+                    font-size:$nameLogo;
                     font-family: $fontJura;
-                    font-weight: 600;
-                    color: #D9D9D9;
+                    font-weight: $bold;
+                    color: $secondaryColor;
                 }
                 .sentence{
-                    font-size:1.5rem;
+                    font-size:$sentence;
                 }
             }
         }
@@ -66,13 +66,13 @@
         bottom:250px;
         left:-140px;
         cursor: pointer;
-        font-size:1rem;
+        font-size:$regularText;
         font-family: $fontJura;
-        font-weight: 600;
-        color: #E0E0E0;
-        transition: color .3s ease;
+        font-weight: $bold;
+        color: $backgroundColor;
+        transition: color .3s ease-in-out;
         &:hover{
-            color: #BC2327;
+            color: $primaryColor;
             text-decoration: underline;
         }
     }
@@ -90,18 +90,18 @@
         justify-content: space-evenly;
         align-items: center;
         border-radius: 10px;
-        box-shadow: 0 0 6px 4px black;
+        box-shadow: $boxShadowMenu;
         position: fixed;
         top:-340px;
         left:18%;
         z-index: 8;
         transform: translateY(300%);
         overflow: hidden;
-        transition: .3s ease-in-out;
+        transition: $transition;
         .title{
-            font-size:4rem;
+            font-size:$subtitle;
             font-family: $fontRubik;
-            color: #BC2327;
+            color: $primaryColor;
             margin-top:20px;
         }
         label{
@@ -113,7 +113,7 @@
                 cursor: pointer;
                 z-index: 3;
                 transform: rotate(0deg);
-                transition: all 0.3s ease-in-out;
+                transition: $transition;
                 &:hover{
                     transform: rotate(90deg);
                 }
@@ -134,15 +134,15 @@
                 }
                 h3{
                     margin-top: 30px;
-                    font-size:1.1rem;
+                    font-size:$regularText;
                     font-family: $fontJura;
-                    color: #BC2327;
+                    color: $primaryColor;
                 }
                 p{
                     padding: 10px auto;
-                    font-size:1rem;
+                    font-size:$regularText;
                     font-family: $fontJura;
-                    color: #d9d9d9;
+                    color: $backgroundColor;
                 }
             }
         }
