--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -8,6 +8,7 @@ $fontRubik: 'Rubik Distressed', cursive;
 $mainTitle:4.5rem;
 $subtitle:4rem;
 $sectionSubtitle:3.5rem;
+$cardLetter:3rem;
 $LargeTitle :2.5rem;
 $nameLogo:1.8rem;
 $sentence:1.5rem;
@@ -90,6 +91,8 @@ $neutralMargin: 0px auto;
 
 
 // Border-radius
+$borderRadius:20px;
+
 
 // Border
 $borderTop:1px solid #3d3d3d;
