--- a/scss/_get_Off.scss
+++ b/scss/_get_Off.scss
@@ -33,7 +33,7 @@
                     font-size:$nameLogo;
                     font-family: $fontJura;
                     font-weight: $bold;
-                    color: $secondaryColor;
+                    color: $backgroundColor;
                 }
                 .sentence{
                     font-size:$sentence;
