--- a/css/main.css
+++ b/css/main.css
@@ -2925,7 +2925,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   z-index: 10;
   padding-top: 30px;
   transform: translate(105%);
-  transition: 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .sectionShop .menuCart .cartShop .closeCross {
   width: 15px;
@@ -2955,10 +2955,10 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cartlistWord {
   width: inherit;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
-  font-weight: 600;
+  color: #bc2327;
+  font-weight: 700;
   margin: 0px;
 }
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .category {
@@ -2972,7 +2972,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .category .titleCartlist {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 600;
   margin: 15px 0px;
 }
@@ -2985,7 +2985,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   border-bottom: 1px solid #e4e4e4;
 }
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .total {
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .itemProduct {
   width: 12%;
@@ -2997,7 +2997,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .description .price {
   font-size: 0.9rem;
   font-family: "Jura", sans-serif;
-  color: #424242;
+  color: #191919;
   font-weight: 600;
 }
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .description .icons img {
@@ -3010,13 +3010,13 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   padding: 2px;
   font-size: 0.9rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 600;
 }
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .total {
   font-size: 0.9rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 600;
 }
 .sectionShop .menuCart .menuCartlist .outcomeCard {
@@ -3034,13 +3034,13 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   width: inherit;
   font-size: 0.9rem;
   font-family: "Jura", sans-serif;
-  color: #424242;
+  color: #191919;
   font-weight: 600;
   display: flex;
   justify-content: space-between;
 }
 .sectionShop .menuCart .menuCartlist .outcomeCard .outcome .total {
-  color: #BC2327;
+  color: #bc2327;
   font-weight: 700;
 }
 .sectionShop .menuCart .menuCartlist .outcomeCard .btnCheckout {
@@ -3056,11 +3056,11 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-weight: 600;
   color: #ffffff;
   border: 1px solid transparent;
-  background-color: #070707;
-  transition: all 0.3s ease;
+  background-color: #000000;
+  transition: all 0.3s ease-in-out;
 }
 .sectionShop .menuCart .menuCartlist .outcomeCard .btnCheckout:hover {
-  color: #070707;
+  color: #000000;
   background-color: #ffffff;
   border: 1px solid #000000;
   font-weight: 600;
