Updating SignIn & createAccount BannerGetOff SASS

--- a/scss/_get_Off.scss
+++ b/scss/_get_Off.scss
@@ -90,6 +90,7 @@
         justify-content: space-evenly;
         align-items: center;
         border-radius: 10px;
+        background-color:#00000013;
         box-shadow: $boxShadowMenu;
         position: fixed;
         top:-340px;
