--- a/css/main.css
+++ b/css/main.css
@@ -789,6 +789,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   justify-content: space-evenly;
   align-items: center;
   border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.0745098039);
   box-shadow: 0 0 10px 6px #070707;
   position: fixed;
   top: -340px;
@@ -3222,14 +3223,14 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   align-items: center;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.0745098039);
-  box-shadow: 0 0 6px 4px black;
+  box-shadow: 0 0 10px 6px #070707;
   position: fixed;
   top: -340px;
   left: 18%;
   z-index: 8;
   transform: translateY(300%);
   overflow: hidden;
-  transition: 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .getOffHoddy .bannerGetOff label .crossCloseWhite {
   width: 25px;
@@ -3247,7 +3248,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .getOffHoddy .bannerGetOff .title {
   font-size: 4rem;
   font-family: "Rubik Distressed", cursive;
-  color: #BC2327;
+  color: #bc2327;
   margin-top: 20px;
 }
 .getOffHoddy .bannerGetOff .slideGetOff {
@@ -3267,15 +3268,15 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .getOffHoddy .bannerGetOff .slideGetOff .hoddy h3 {
   margin-top: 30px;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-family: "Jura", sans-serif;
-  color: #BC2327;
+  color: #bc2327;
 }
 .getOffHoddy .bannerGetOff .slideGetOff .hoddy p {
   padding: 10px auto;
   font-size: 1rem;
   font-family: "Jura", sans-serif;
-  color: #d9d9d9;
+  color: #f1f1f1;
 }
 .getOffHoddy .bannerGetOff::before {
   content: "";
