--- a/scss/_sign_In_&_Create_Account.scss
+++ b/scss/_sign_In_&_Create_Account.scss
@@ -866,8 +866,8 @@
  // Banner getOff
 
 .getOffHoddy{
-    width:100%;
-    height: 100%;
+    width:$screenPercentageWidth;
+    height:$screenPercentageHeight;
     #cross{
         display: none;
         &:checked ~ .bannerGetOff{
@@ -883,14 +883,14 @@
         align-items: center;
         border-radius: 10px;
         background-color:#00000013;
-        box-shadow: 0 0 6px 4px black;
+        box-shadow: $boxShadowMenu;
         position: fixed;
         top:-340px;
         left:18%;
         z-index: 8;
         transform: translateY(300%);
         overflow: hidden;
-        transition: .3s ease-in-out;
+        transition: $transition;
         label{
             .crossCloseWhite{
                 width:25px;
@@ -900,16 +900,16 @@
                 cursor: pointer;
                 z-index: 10;
                 transform: rotate(0deg);
-                transition: all 0.3s ease-in-out;
+                transition: $transition;
                 &:hover{
                     transform: rotate(90deg);
                 }
             }
         }
         .title{
-            font-size:4rem;
+            font-size:$subtitle;
             font-family: $fontRubik;
-            color: #BC2327;
+            color: $primaryColor;
             margin-top:20px;
         }
         .slideGetOff{
@@ -927,15 +927,15 @@
                 }
                 h3{
                     margin-top: 30px;
-                    font-size:1.1rem;
+                    font-size:$regularText;
                     font-family: $fontJura;
-                    color: #BC2327;
+                    color: $primaryColor;
                 }
                 p{
                     padding: 10px auto;
-                    font-size:1rem;
+                    font-size:$regularText;
                     font-family: $fontJura;
-                    color: #d9d9d9;
+                    color: $backgroundColor;
                 }
             }
         }
